@@ -5,6 +5,7 @@ Version 0.4.1+
 	* Do not fork a process in gridminimise if nprocs == 1 (makes for easier
 	debugging, at the cost of slightly more complex code).
 	* Add milk.supervised.multi_label
+	* Fix ext.jugparallel when features is a Task
 
 Version 0.4.1 2011-08-25 by luispedro
 	* Fix important bug in multi-process gridsearch
